Issue:#1 feat:Implement order and payment
Order services added:
- payment
- verifyOrder
- readOrders
- readOrderById
- checkOrders
- checkOrder

Order and Payment model added
